# amora

./: .gitignore  AGENTS.md  MASTERPLAN.md  RELEASE.md  TODO_DEMANDS.md  backend.spec  backend_entry.py  installer.bat  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  start_api.bat  start_koboldcpp.bat
.github/workflows/: release.yml
config/: default.yaml
design-system/amora/: MASTER.md
design-system/project-t/: MASTER.md
frontend/: index.html  package-lock.json  package.json  tauri-dev.bat  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
lore/lieux/: taverne.json
lore/personnages/: gardes.json
src/api/: __init__.py  deps.py  main.py
src/character/: __init__.py  manager.py  models.py
src/combat/: __init__.py  actions.py  manager.py  models.py  validation.py
src/core/: __init__.py  config.py  dice.py  engine.py  events.py  exceptions.py  logging.py
src/inventory/: __init__.py  item.py  manager.py
src/llm/: __init__.py  gateway.py  mock.py  parser.py  prompt.py  streaming.py  tokens.py
src/lore/: __init__.py  book.py  entry.py  injection.py  trigger.py
src/memory/: __init__.py  context.py  embeddings.py  memory_store.py  retrieval.py  summary.py
src/persistence/: __init__.py  database.py  files.py
src/quest/: __init__.py  manager.py  models.py
static/: index.html
static/assets/: index-22EFZU4w.css  index-C73PsZmQ.css  index-DE1iJNRU.js  index-kWielIap.js
tests/: conftest.py
tests/unit/: test_actions_validation.py  test_api.py  test_character.py  test_combat_manager.py  test_combat_models.py  (+18 more)
(+48 files in other folders)
